--- a/mywebsite/app/styling/page.css
+++ b/mywebsite/app/styling/page.css
@@ -1,3 +1,8 @@
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
 .main-section {
     display: flex;
     flex-direction: column;
@@ -45,6 +50,8 @@
     color: #fff;
     padding: 1rem 0;
     text-align: center;
+    margin-top: auto; /* Push footer to the bottom */
+    width: 100%; /* Occupy full width */
 }
 
 .footer p {
