--- a/mywebsite/app/styling/NavBar.module.css
+++ b/mywebsite/app/styling/NavBar.module.css
@@ -25,6 +25,7 @@
     padding: 1rem;
     z-index: 100;
     box-sizing: border-box;
+    overflow-y: hidden; /* Hide the vertical scrollbar */
 }
 
 .menuContent > * {
