--- a/mywebsite/app/globals.css
+++ b/mywebsite/app/globals.css
@@ -6,6 +6,12 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --name-margin-bottom: 0rem;
+  --name-font-size: 1.25rem;
+  --name-font-weight: bold;
+  --email-margin-top: 0;
+  --email-font-size: 0.875rem;
+  --email-color: #666;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -27,8 +33,10 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: 'Inter', sans-serif;
-  background-color: #000; /* Dark background */
-  color: #fff; /* White text */
+  background-color: #000;
+  /* Dark background */
+  color: #fff;
+  /* White text */
 }
 
 * {
@@ -40,7 +48,12 @@ a {
   color: inherit;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
   font-weight: normal;
 }
